Fix search navigation overlaps

--- a/_sass/components/_forms.scss
+++ b/_sass/components/_forms.scss
@@ -2,6 +2,10 @@ form *:last-child {
     margin-bottom: 0 !important;
 }
 
+search {
+    margin-top: $padding * 2;
+}
+
 fieldset {
     margin-bottom: $padding * 2;
     @include clearfix();
